[aihandson] Generate unit tests, refactor classes